[tool.poetry]
name = "kata"
version = "0.1.0"
description = ""
authors = ["Xiaoming Gao <xiaoming.gao@rea-group.com>"]

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.0.0"
immute = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.961"
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
